--- a/package.json
+++ b/package.json
@@ -33,5 +33,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/superfoxx/05.10.20_Facult_kanban_app_start.git"
+  },
+  "author": "Ilya",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/superfoxx/05.10.20_Facult_kanban_app_start/issues"
+  },
+  "homepage": "https://github.com/superfoxx/05.10.20_Facult_kanban_app_start#readme",
+  "keywords": []
 }
